k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: happylife
  labels:
    name: happylife
    app: happylife
