k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: happylife
  labels:
    app: webapp
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 30080  # Accessible on Minikube at <minikube-ip>:30080
  selector:
    app: webapp
